--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "node-fetch": "^1.6.3",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "whatwg-fetch": "^2.0.3"
   }
 }
